set( SOURCES

parcels/derived/basicKinematicParcel/makeBasicKinematicParcelSubmodels.C
parcels/derived/basicKinematicCollidingParcel/makeBasicKinematicCollidingParcelSubmodels.C
parcels/derived/basicThermoParcel/makeBasicThermoParcelSubmodels.C
parcels/derived/basicReactingParcel/makeBasicReactingParcelSubmodels.C
parcels/derived/basicReactingMultiphaseParcel/makeBasicReactingMultiphaseParcelSubmodels.C
parcels/derived/basicKinematicMPPICParcel/makeBasicKinematicMPPICParcelSubmodels.C

)

## Define the output
add_library( lagrangianTurbulence SHARED ${SOURCES} )
install( TARGETS lagrangianTurbulence DESTINATION lib )

target_link_libraries( lagrangianTurbulence lagrangian lagrangianIntermediate distributionModels specie compressibleTransportModels fluidThermophysicalModels liquidProperties liquidMixtureProperties solidProperties solidMixtureProperties reactionThermophysicalModels SLGThermo radiationModels turbulenceModels incompressibleTurbulenceModels compressibleTurbulenceModels incompressibleTransportModels regionModels surfaceFilmModels dynamicFvMesh sampling finiteVolume meshTools )

include_directories( ${CMAKE_SOURCE_DIR}/src/OSspecific/POSIX )
include_directories( ${CMAKE_SOURCE_DIR}/src/OSspecific/POSIX/cpuTime )
include_directories( ${CMAKE_SOURCE_DIR}/src/OSspecific/POSIX/memInfo )
include_directories( ${CMAKE_SOURCE_DIR}/src/OSspecific/POSIX/signals )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/algorithms/indexedOctree )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/HashTables/HashSet )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/HashTables/HashTable )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/HashTables/Map )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/accessTypes/ILList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/accessTypes/LList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/accessTypes/LPtrList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/accessTypes/UILList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/linkTypes/DLListBase )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/linkTypes/SLListBase )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/user )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/BiIndirectList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/DynamicList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/FixedList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/IndirectList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/List )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/ListListOps )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/ListOps )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/PackedList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/PtrList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/SortableList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/SubList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/UIndirectList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/UList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/UPtrList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/NamedEnum )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOobject )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOobjects/CompactIOField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOobjects/CompactIOList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOobjects/IOField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOobjects/IOList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOobjects/IOdictionary )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Fstreams )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/IOstreams )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Pstreams )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Sstreams )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/StringStreams )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Tstreams )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/token )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/Time )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/Time/instant )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/dictionary )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/dictionary/entry )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/dictionary/primitiveEntry )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/dynamicLibrary/dlLibraryTable )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/error )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/functionObjects/functionObject )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/functionObjects/functionObjectList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/objectRegistry )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/regIOobject )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/runTimeSelection/construction )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/typeInfo )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/dimensionSet )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/dimensionedTypes )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/dimensionedTypes/dimensionedScalar )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/dimensionedTypes/dimensionedSphericalTensor )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/dimensionedTypes/dimensionedSymmTensor )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/dimensionedTypes/dimensionedTensor )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/dimensionedTypes/dimensionedType )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/dimensionedTypes/dimensionedVector )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/DimensionedFields/DimensionedField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/DimensionedFields/DimensionedScalarField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/DimensionedFields/DimensionedSphericalTensorField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/DimensionedFields/DimensionedSymmTensorField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/DimensionedFields/DimensionedTensorField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/FieldFields/FieldField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/FieldFields/oneFieldField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/FieldFields/scalarFieldField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/FieldFields/sphericalTensorFieldField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/FieldFields/symmTensorFieldField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/FieldFields/tensorFieldField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/Field )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/diagTensorField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/labelField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/oneField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/scalarField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/sphericalTensorField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/symmTensorField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/tensorField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/transformField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/transformList )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/vectorField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/zeroField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/GeometricFields/GeometricField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/GeometricFields/GeometricScalarField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/GeometricFields/GeometricSphericalTensorField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/GeometricFields/GeometricSymmTensorField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/GeometricFields/GeometricTensorField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/GeometricFields/geometricOneField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/GeometricFields/pointFields )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/cloud )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/pointPatchFields/basic/calculated )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/pointPatchFields/pointPatchField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/global )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/global/clock )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/global/constants )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/global/constants/atomic )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/global/constants/electromagnetic )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/global/constants/fundamental )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/global/constants/mathematical )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/global/constants/physicoChemical )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/global/constants/thermodynamic )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/global/constants/universal )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/global/debug )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/global/unitConversion )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/include )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/matrices/DiagonalMatrix )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/matrices/LduMatrix/LduMatrix )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/matrices/LduMatrix/LduMatrix/LduInterfaceField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/matrices/LduMatrix/Solvers/DiagonalSolver )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/matrices/Matrix )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/matrices/MatrixBlock )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/matrices/RectangularMatrix )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/matrices/SquareMatrix )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/matrices/SymmetricSquareMatrix )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/matrices/lduMatrix/lduAddressing )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/matrices/lduMatrix/lduAddressing/lduInterface )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/matrices/lduMatrix/lduAddressing/lduInterfaceFields/lduInterfaceField )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/matrices/lduMatrix/lduAddressing/lduSchedule )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/matrices/lduMatrix/lduMatrix )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/matrices/scalarMatrices )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/matrices/solution )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/memory/Xfer )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/memory/autoPtr )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/memory/refCount )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/memory/tmp )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/GeoMesh )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/Identifiers/patch )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/MeshObject )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/ProcessorTopology )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/bandCompression )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/boundBox )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/data )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/lduMesh )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/meshShapes/cell )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/meshShapes/cellModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/meshShapes/cellShape )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/meshShapes/edge )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/meshShapes/face )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/meshShapes/triFace )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/meshTools )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/pointMesh )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/pointMesh/pointBoundaryMesh )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/pointMesh/pointPatches/pointPatch )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/globalMeshData )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/mapPolyMesh )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/mapPolyMesh/mapDistribute )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/mapPolyMesh/objectMap )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/polyBoundaryMesh )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/polyMeshTetDecomposition )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/polyPatches/basic/coupled )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/polyPatches/constraint/cyclic )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/polyPatches/constraint/empty )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/polyPatches/constraint/processor )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/polyPatches/constraint/symmetry )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/polyPatches/constraint/symmetryPlane )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/polyPatches/constraint/wedge )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/polyPatches/derived/wall )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/polyPatches/polyPatch )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/syncTools )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/zones/ZoneMesh )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/zones/cellZone )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/zones/faceZone )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/zones/pointZone )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/polyMesh/zones/zone )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/primitiveMesh )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/primitiveMesh/PrimitivePatch )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/primitiveMesh/primitivePatch )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/primitiveShapes/line )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/primitiveShapes/objectHit )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/primitiveShapes/plane )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/primitiveShapes/point )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/primitiveShapes/point2D )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/primitiveShapes/tetrahedron )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/primitiveShapes/triangle )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/treeBoundBox )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/DiagTensor )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/DiagTensor/diagTensor )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/MatrixSpace )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Pair )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Scalar )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Scalar/doubleScalar )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Scalar/floatScalar )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Scalar/lists )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Scalar/scalar )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/SphericalTensor )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/SphericalTensor/sphericalTensor )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Swap )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/SymmTensor )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/SymmTensor/symmTensor )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Tensor )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Tensor/tensor )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Tuple2 )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Vector )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Vector/vector )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Vector2D )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Vector2D/vector2D )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/VectorSpace )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/bools/Switch )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/bools/bool )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/bools/lists )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/chars/char )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/contiguous )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/demandDrivenEntry )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/direction )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/functions/Function1/Constant )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/functions/Function1/Function1 )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/functions/TimeFunction1 )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/globalIndexAndTransform )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/globalIndexAndTransform/vectorTensorTransform )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/hashes/Hash )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/hashes/Hasher )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/hashes/SHA1 )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/int )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/int32 )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/int64 )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/label )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/lists )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/uLabel )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/uint )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/uint32 )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/uint64 )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/nil )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/nullObject )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/one )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ops )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/pTraits )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/quaternion )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/random/Random )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/random/cachedRandom )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/septernion )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/spatialVectorAlgebra/SpatialTensor )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/spatialVectorAlgebra/SpatialTensor/spatialTensor )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/spatialVectorAlgebra/SpatialVector )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/spatialVectorAlgebra/SpatialVector/spatialVector )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/spatialVectorAlgebra/spatialTransform )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/strings/fileName )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/strings/keyType )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/strings/lists )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/strings/string )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/strings/word )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/strings/wordRe )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/subModelBase )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/transform )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/triad )
include_directories( ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/zero )
include_directories( ${CMAKE_SOURCE_DIR}/src/TurbulenceModels/turbulenceModels )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fields/fvPatchFields/basic/calculated )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fields/fvPatchFields/basic/coupled )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fields/fvPatchFields/basic/extrapolatedCalculated )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fields/fvPatchFields/basic/fixedValue )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fields/fvPatchFields/basic/zeroGradient )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fields/fvPatchFields/derived/mappedField )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fields/fvPatchFields/derived/mappedFixedInternalValue )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fields/fvPatchFields/derived/mappedFixedPushedInternalValue )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fields/fvPatchFields/derived/mappedFixedValue )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fields/fvPatchFields/fvPatchField )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fields/fvsPatchFields/basic/calculated )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fields/fvsPatchFields/fvsPatchField )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fields/surfaceFields )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fields/volFields )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/finiteVolume/fv )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/finiteVolume/fvSchemes )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/finiteVolume/fvSolution )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/finiteVolume/fvc )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/finiteVolume/fvm )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/finiteVolume/gradSchemes/gaussGrad )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/finiteVolume/gradSchemes/gradScheme )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fvMatrices )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fvMatrices/fvMatrix )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fvMatrices/fvScalarMatrix )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fvMesh )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fvMesh/fvBoundaryMesh )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fvMesh/fvPatches/basic/coupled )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fvMesh/fvPatches/fvPatch )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/fvMesh/wallDist/nearWallDist )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/interpolation/interpolation/interpolation )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/interpolation/interpolation/interpolationCell )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/interpolation/surfaceInterpolation/schemes/linear )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/interpolation/surfaceInterpolation/surfaceInterpolation )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/interpolation/surfaceInterpolation/surfaceInterpolationScheme )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/surfaceMesh )
include_directories( ${CMAKE_SOURCE_DIR}/src/finiteVolume/volMesh )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/basic/Cloud )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/basic/IOPosition )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/basic/particle )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/IntegrationScheme/IntegrationScheme )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/clouds/Templates/CollidingCloud )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/clouds/Templates/KinematicCloud )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/clouds/Templates/KinematicCloud/cloudSolution )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/clouds/Templates/MPPICCloud )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/clouds/Templates/ReactingCloud )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/clouds/Templates/ReactingMultiphaseCloud )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/clouds/Templates/ThermoCloud )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/clouds/baseClasses/kinematicCloud )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/clouds/baseClasses/reactingCloud )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/clouds/baseClasses/reactingMultiphaseCloud )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/clouds/baseClasses/thermoCloud )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/clouds/derived/basicKinematicCloud )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/clouds/derived/basicKinematicCollidingCloud )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/clouds/derived/basicKinematicMPPICCloud )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/clouds/derived/basicReactingCloud )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/clouds/derived/basicReactingMultiphaseCloud )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/clouds/derived/basicThermoCloud )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/parcels/Templates/CollidingParcel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/parcels/Templates/CollidingParcel/CollisionRecordList )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/parcels/Templates/CollidingParcel/CollisionRecordList/PairCollisionRecord )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/parcels/Templates/CollidingParcel/CollisionRecordList/WallCollisionRecord )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/parcels/Templates/KinematicParcel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/parcels/Templates/MPPICParcel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/parcels/Templates/ReactingMultiphaseParcel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/parcels/Templates/ReactingParcel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/parcels/Templates/ThermoParcel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/parcels/derived/basicKinematicCollidingParcel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/parcels/derived/basicKinematicMPPICParcel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/parcels/derived/basicKinematicParcel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/parcels/derived/basicReactingMultiphaseParcel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/parcels/derived/basicReactingParcel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/parcels/derived/basicThermoParcel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/phaseProperties/phaseProperties )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/phaseProperties/phasePropertiesList )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/CloudFunctionObjects/CloudFunctionObject )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/CloudFunctionObjects/CloudFunctionObjectList )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/ForceTypes/ParticleForceList )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/Kinematic/CollisionModel/CollisionModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/Kinematic/DispersionModel/DispersionModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/Kinematic/InjectionModel/InjectionModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/Kinematic/ParticleForces/ParticleForce )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/Kinematic/ParticleForces/forceSuSp )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/Kinematic/PatchInteractionModel/PatchInteractionModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/Kinematic/StochasticCollision/StochasticCollisionModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/Kinematic/SurfaceFilmModel/SurfaceFilmModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/MPPIC/AveragingMethods/AveragingMethod )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/MPPIC/CorrectionLimitingMethods/CorrectionLimitingMethod )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/MPPIC/DampingModels/DampingModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/MPPIC/IsotropyModels/IsotropyModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/MPPIC/PackingModels/PackingModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/MPPIC/ParticleStressModels/ParticleStressModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/MPPIC/TimeScaleModels/TimeScaleModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/Reacting/CompositionModel/CompositionModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/Reacting/PhaseChangeModel/PhaseChangeModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/ReactingMultiphase/DevolatilisationModel/DevolatilisationModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/ReactingMultiphase/SurfaceReactionModel/SurfaceReactionModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/intermediate/submodels/Thermodynamic/HeatTransferModel/HeatTransferModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/turbulence/parcels/include )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/turbulence/submodels/Kinematic/DispersionModel/DispersionRASModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/turbulence/submodels/Kinematic/DispersionModel/GradientDispersionRAS )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/turbulence/submodels/Kinematic/DispersionModel/StochasticDispersionRAS )
include_directories( ${CMAKE_SOURCE_DIR}/src/lagrangian/turbulence/submodels/Thermodynamic/ParticleForces/BrownianMotion )
include_directories( ${CMAKE_SOURCE_DIR}/src/meshTools/AMIInterpolation/AMIInterpolation )
include_directories( ${CMAKE_SOURCE_DIR}/src/meshTools/AMIInterpolation/AMIInterpolation/AMIMethod/AMIMethod )
include_directories( ${CMAKE_SOURCE_DIR}/src/meshTools/AMIInterpolation/faceAreaIntersect )
include_directories( ${CMAKE_SOURCE_DIR}/src/meshTools/AMIInterpolation/patches/cyclicAMI/cyclicAMIPolyPatch )
include_directories( ${CMAKE_SOURCE_DIR}/src/meshTools/indexedOctree )
include_directories( ${CMAKE_SOURCE_DIR}/src/meshTools/mappedPatches/mappedPolyPatch )
include_directories( ${CMAKE_SOURCE_DIR}/src/meshTools/meshTools )
include_directories( ${CMAKE_SOURCE_DIR}/src/meshTools/searchableSurface )
include_directories( ${CMAKE_SOURCE_DIR}/src/meshTools/triSurface/surfaceLocation )
include_directories( ${CMAKE_SOURCE_DIR}/src/meshTools/triSurface/triSurfaceTools )
include_directories( ${CMAKE_SOURCE_DIR}/src/meshTools/triSurface/triangleFuncs )
include_directories( ${CMAKE_SOURCE_DIR}/src/regionModels/regionModel/regionModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/regionModels/regionModel/regionModelFunctionObject/regionModelFunctionObject )
include_directories( ${CMAKE_SOURCE_DIR}/src/regionModels/regionModel/singleLayerRegion )
include_directories( ${CMAKE_SOURCE_DIR}/src/regionModels/surfaceFilmModels/surfaceFilmModel )
include_directories( ${CMAKE_SOURCE_DIR}/src/thermophysicalModels/SLGThermo/SLGThermo )
include_directories( ${CMAKE_SOURCE_DIR}/src/thermophysicalModels/basic/basicThermo )
include_directories( ${CMAKE_SOURCE_DIR}/src/thermophysicalModels/basic/fluidThermo )
include_directories( ${CMAKE_SOURCE_DIR}/src/thermophysicalModels/properties/liquidMixtureProperties/liquidMixtureProperties )
include_directories( ${CMAKE_SOURCE_DIR}/src/thermophysicalModels/properties/liquidProperties/liquidProperties )
include_directories( ${CMAKE_SOURCE_DIR}/src/thermophysicalModels/properties/solidMixtureProperties/solidMixtureProperties )
include_directories( ${CMAKE_SOURCE_DIR}/src/thermophysicalModels/properties/solidProperties/solidProperties )
include_directories( ${CMAKE_SOURCE_DIR}/src/thermophysicalModels/reactionThermo/mixtures/basicMultiComponentMixture )
include_directories( ${CMAKE_SOURCE_DIR}/src/thermophysicalModels/reactionThermo/mixtures/basicSpecieMixture )
include_directories( ${CMAKE_SOURCE_DIR}/src/thermophysicalModels/specie/specie )
include_directories( ${CMAKE_SOURCE_DIR}/src/thermophysicalModels/specie/speciesTable )
include_directories( ${CMAKE_SOURCE_DIR}/src/transportModels/compressible/compressibleTransportModel )